--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Pensionat</title>
+    <!-- Css sheet -->
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <!-- import Poppins font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <button><a th:href="@{index}">Home</a> </button>
+
+<div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{index}" >Home</a> </button>
     </nav>
-<div>
-    <button onclick="">Boka vistelse</button>
-    <hr>
-    <button onclick="">Ändra befintlig bokning eller kund</button>
+    <h1>Välkommen till Pensionatet!</h1>
+    <button class="button"><a th:href="@{/book}">Boka Vistelse</a></button>
+    <button class="button" onclick="">Ändra befintlig bokning eller kund</button>
 </div>
 </body>
 </html>
