--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 
 <div class="container">
     <nav class="navbar">
-        <button class="navButton"><a th:href="@{index}" >Home</a> </button>
+        <button class="navButton"><a th:href="@{/index}" >Home</a> </button>
     </nav>
     <h1>Välkommen till Pensionatet!</h1>
     <button class="button"><a th:href="@{/book}">Boka Vistelse</a></button>
