added sample bookingdetails

--- a/src/main/resources/templates/bookingDetails.html
+++ b/src/main/resources/templates/bookingDetails.html
@@ -5,10 +5,9 @@
     <title>Booking Details</title>
 </head>
 <body>
-<h2>Booking Details</h2>
-<p>ID: <span th:text="${booking.id}"></span></p>
-<p>Start Date: <span th:text="${booking.startdatum}"></span></p>
-<p>End Date: <span th:text="${booking.slutdatum}"></span></p>
-<p>Number of Beds: <span th:text="${booking.numOfBeds}"></span></p>
+<h2>Boknings information</h2>
+<p>Start Datum: <span th:text="${booking.startdatum}"></span></p>
+<p>Slut Datum: <span th:text="${booking.slutdatum}"></span></p>
+<p>Antal sängar: <span th:text="${booking.numOfBeds}"></span></p>
 </body>
 </html>
