--- a/src/main/resources/templates/visakunder.html
+++ b/src/main/resources/templates/visakunder.html
@@ -8,9 +8,9 @@
 <!-- Form skapa ny kund -->
 <h2>Registrera ny kund</h2>
 
-<form action="#" th:action="@{/kunder/create}" method="post">
-    <label for="name">Name:  </label>
-    <input type="text" id="name" name="name" value=""><br>
+<form action="#" th:action="@{/kunder/registreraNyKund}" method="post">
+    <label for="namn">Name: </label>
+    <input type="text" id="namn" name="namn" value=""><br>
 
     <label for="email">E-post:</label>
     <input type="email" id="email" name="email" value=""><br>
