Bokning fungerar och läggs in i databas, lite småfix kvar med datum, namnkontroll/kundskapande och felhantering

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,8 +18,7 @@
     </nav>
     <h1>Välkommen till Pensionatet!</h1>
     <button class="button"><a th:href="@{/book}">Boka Vistelse</a></button>
-    <button class="button"><a th:href="@{/kunder}">Ändra befintlig bokning eller kund</a></button>
-    <!--<button class="button" onclick="">Ändra befintlig bokning eller kund</button>-->
+    <button class="button"><a th:href="@{/kunder}">Hantera kunder och bokningar</a></button>
 </div>
 </body>
 </html>
