--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -111,6 +111,10 @@ body{
     margin-right: 5px;
 }
 
+.room-inner-container form{
+    display: flex;
+}
+
 .room-inner-container button{
     margin-left: 3px;
 }
