--- a/src/main/resources/templates/addBokning.html
+++ b/src/main/resources/templates/addBokning.html
@@ -36,16 +36,25 @@
     </form>
     <div class="small-container" th:unless="${#lists.isEmpty(allRooms)}">
             <h3 th:text="${rubrik}" ></h3>
-                <div class="room-container" th:each="room : ${allRooms}">
-                    <div class="room-inner-container">
-                        <p th:text="'Rum ' + ${room.rumsnr} +' ' + ${roomType}"></p>
+            <div class="room-container" th:each="room : ${allRooms}">
+                <div class="room-inner-container">
+                    <p th:text="'Rum ' + ${room.rumsnr} +' ' + ${roomType}"></p>
+                    <form action="#" th:action="@{/bokningar/add}" method="post">
                         <div th:if="${room.dubbelrum}">
-                            <label for="roomType">Extrasäng</label>
-                            <input type="number" id="roomType" name="roomType" th:max="${room.storlek - 1}" min="0" value="0">
+                            <label for="numOfBeds">Extrasäng</label>
+                            <input type="number" id="numOfBeds" name="numOfBeds" th:max="${room.storlek - 1}" min="0" value="0">
                         </div>
-                        <button class="book-button" type="submit" th:href="bekräftelseControllern">Boka</button>
-                    </div>
+                        <input type="hidden" name="rumId" th:value="${room.id}">
+                        <input type="hidden" name="namn" th:value="${name}">
+                        <input type="hidden" name="telNr" th:value="${telNr}">
+                        <input type="hidden" name="email" th:value="${email}">
+                        <input type="hidden" name="startDate" th:value="${startDate}">
+                        <input type="hidden" name="endDate" th:value="${endDate}">
+                        <input type="hidden" name="numOfBeds" th:value="${numOfBeds}">
+                        <button class="book-button" type="submit">Boka</button>
+                    </form>
                 </div>
+            </div>
     </div>
 </div>
 </body>
