Uppdatera kundinfo har implementerats

--- a/src/main/resources/templates/visakunder.html
+++ b/src/main/resources/templates/visakunder.html
@@ -35,8 +35,8 @@
     <tr >
         <td>Kund namn</td>
         <td>Alla bokningar</td>
-        <td>Ändra bokning</td>
-        <td>Delete bokning</td>
+        <td>Ändra Kundinfo</td>
+        <td>Ta bort Kund</td>
     </tr>
     <tr th:each="kund:${allakunder}">
         <th th:text="${kund.namn}"></th>
