added simple home button in kunder

--- a/src/main/resources/templates/visakunder.html
+++ b/src/main/resources/templates/visakunder.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <!-- Form skapa ny kund -->
+<button class="navButton"><a th:href="@{/index}" >Home</a> </button>
 <h2>Registrera ny kund</h2>
 
 <form action="#" th:action="@{/kunder/registreraNyKund}" method="post">
