--- a/src/main/resources/templates/updatekund.html
+++ b/src/main/resources/templates/updatekund.html
@@ -2,27 +2,32 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Alla kunder</title>
+    <title>Uppdatera kundinfo</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Uppdatera kundinfo -->
-<h2>Uppdatera kundinfo</h2>
+<div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/kunder}" >Gå tillbaka</a></button>
+    </nav>
+    <h2>Uppdatera kundinfo</h2>
+    <form action="#" th:action="@{/kunder/update}" th:object="${updatekund}" method="post">
+        <label for="name">Name:  </label>
+        <input type="text" id="name" name="name" th:field="*{namn}" ><br>
 
-<form action="#" th:action="@{/kunder/update}" th:object="${updatekund}" method="post">
-    <label for="name">Name:  </label>
-    <input type="text" id="name" name="name" th:field="*{namn}" ><br>
+        <label for="email">E-post:</label>
+        <input type="email" id="email" name="email" th:field="*{email}"><br>
 
-    <label for="email">E-post:</label>
-    <input type="email" id="email" name="email" th:field="*{email}"><br>
+        <label for="tel">Mobil: </label>
+        <input type="tel" id="tel" name="tel" th:field="*{tel}">
+        <input type="hidden" id="id" name="id" th:field="*{id}">
 
-    <label for="tel">Mobil: </label>
-    <input type="tel" id="tel" name="tel" th:field="*{tel}">
-    <input type=hidden id="id" name="tel" th:field="*{id}">
-
-    <br><br>
-    <input type="submit" value="Uppdatera kundinfo">
-</form>
-</table>
+        <br><br>
+        <input type="submit" value="Uppdatera kundinfo">
+    </form>
 </div>
 </body>
 </html>
