--- a/src/main/resources/templates/visakunder.html
+++ b/src/main/resources/templates/visakunder.html
@@ -3,49 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Alla kunder</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Form skapa ny kund -->
-<button class="navButton"><a th:href="@{/index}" >Home</a> </button>
-<h2>Registrera ny kund</h2>
-
-<form action="#" th:action="@{/kunder/registreraNyKund}" method="post">
-    <label for="namn">Name: </label>
-    <input type="text" id="namn" name="namn" value=""><br>
-
-    <label for="email">E-post:</label>
-    <input type="email" id="email" name="email" value=""><br>
-
-    <label for="tel">Mobil: </label>
-    <input type="tel" id="tel" name="tel" value="">
-
-    <br><br>
-    <input type="submit" value="Lägg till kund">
-</form>
-
-<p>--------------------------------------------------</p>
-<!-- Visa alla kunder-->
-<h2>Alla registrerade kunder</h2>
-<!-- Visa denna div om det inte finns kunder-->
-<div class="all_customers" th:if="${#lists.isEmpty(allakunder)}">
-    <p>Det finns inga registrerade kunder</p>
-</div>
-<!-- Visa denna div om det finns kunder-->
-<div class="all_customers" th:unless=" ${#lists.isEmpty(allakunder)}">
-<table>
-    <tr >
-        <td>Kund namn</td>
-        <td>Alla bokningar</td>
-        <td>Ändra Kundinfo</td>
-        <td>Ta bort Kund</td>
-    </tr>
-    <tr th:each="kund:${allakunder}">
-        <th th:text="${kund.namn}"></th>
-        <th><a th:href="@{/kunder/showBokingarById/{id}(id=${kund.id})}">Visa bokningar</a></th>
-        <th><a th:href="@{/kunder/editById/{id}(id=${kund.id})}">Ändra</a></th>
-        <th><a th:href="@{/kunder/deleteById/{id}(id=${kund.id})}">Delete</a></th>
-    </tr>
-</table>
+<div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/index}" >Home</a></button>
+    </nav>
+    <h2>Registrera ny kund</h2>
+    <form action="#" th:action="@{/kunder/registreraNyKund}" method="post">
+        <label for="namn">Name: </label>
+        <input type="text" id="namn" name="namn" value=""><br>
+        <label for="email">E-post:</label>
+        <input type="email" id="email" name="email" value=""><br>
+        <label for="tel">Mobil: </label>
+        <input type="tel" id="tel" name="tel" value="">
+        <br><br>
+        <input type="submit" value="Lägg till kund">
+    </form>
+    <p>--------------------------------------------------</p>
+    <h2>Alla registrerade kunder</h2>
+    <div class="all_customers" th:if="${#lists.isEmpty(allakunder)}">
+        <p>Det finns inga registrerade kunder</p>
+    </div>
+    <div class="all_customers" th:unless="${#lists.isEmpty(allakunder)}">
+        <table>
+            <tr>
+                <td>Kund namn</td>
+                <td>Alla bokningar</td>
+                <td>Ändra Kundinfo</td>
+                <td>Ta bort Kund</td>
+            </tr>
+            <tr th:each="kund : ${allakunder}">
+                <td th:text="${kund.namn}"></td>
+                <td><a th:href="@{/kunder/showBokingarById/{id}(id=${kund.id})}">Visa bokningar</a></td>
+                <td><a th:href="@{/kunder/editById/{id}(id=${kund.id})}">Ändra</a></td>
+                <td><a th:href="@{/kunder/deleteById/{id}(id=${kund.id})}">Delete</a></td>
+            </tr>
+        </table>
+    </div>
 </div>
 </body>
 </html>
