--- a/src/main/resources/templates/visabokningperkund.html
+++ b/src/main/resources/templates/visabokningperkund.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title><!DOCTYPE html>
-        <html lang="en" xmlns:th="http://www.thymeleaf.org">
-        <head>
-        <meta charset="UTF-8">
-        <title>Mina bokningar</title>
+    <title>Mina bokningar</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-
 <h2>Mina bokningar</h2>
 <!-- Visa denna div om det inte finns bokningar-->
-<div class="all_bokningar" th:if="${#lists.isEmpty(allabokningar)}">
+<div class="alla_bokningar" th:if="${#lists.isEmpty(allabokningar)}">
     <p>Du har inga registrerade bokningar</p>
 </div>
 <!-- Visa denna div om det finns bokningar-->
-<div class="all_bokningar" th:unless=" ${#lists.isEmpty(allabokningar)}">
+<div class="alla_bokningar" th:unless=" ${#lists.isEmpty(allabokningar)}">
+
     <table>
         <tr >
             <td>Startdatum</td>
@@ -28,7 +29,10 @@
             <th th:text="${bokning.startdatum}"></th>
             <th th:text="${bokning.slutdatum}"></th>
             <th th:text="${bokning.numOfBeds}"></th>
-            <th><a th:href="@{/kunder/showBokingarById/{id}(id=${kund.id})}">Visa bokningar</a></th>
+
+            <!-- länka till en ändra bokningssida -->
+            <th><a th:href="@{/book}">Ändra bokning</a></th>
+
         </tr>
     </table>
 </div>
@@ -36,6 +40,5 @@
 </html></title>
 </head>
 <body>
-
 </body>
 </html>
