--- a/src/main/resources/templates/visabokningperkund.html
+++ b/src/main/resources/templates/visabokningperkund.html
@@ -11,35 +11,41 @@
 </head>
 <body>
 <div class="container">
-<nav class="navbar">
-    <button class="navButton"><a th:href="@{/kunder}" >Gå tillbaka</a></button>
-</nav>
-<h2>Mina bokningar</h2>
-<!-- Visa denna div om det inte finns bokningar-->
-<div class="alla_bokningar" th:if="${#lists.isEmpty(allabokningar)}">
-    <p>Du har inga registrerade bokningar</p>
-</div>
-<!-- Visa denna div om det finns bokningar-->
-<div class="alla_bokningar" th:unless=" ${#lists.isEmpty(allabokningar)}">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/kunder}" >Gå tillbaka</a></button>
+    </nav>
+    <h2>Mina bokningar</h2>
+    <!-- Visa denna div om det inte finns bokningar-->
+    <div class="alla_bokningar" th:if="${#lists.isEmpty(allabokningar)}">
+        <p>Du har inga registrerade bokningar</p>
+    </div>
+    <!-- Visa denna div om det finns bokningar-->
+    <div class="alla_bokningar" th:unless=" ${#lists.isEmpty(allabokningar)}">
 
-    <table>
-        <tr >
-            <td>Startdatum</td>
-            <td>Slutdatum</td>
-            <td>Antal sängar</td>
-            <td>Ändra bokning</td>
-        </tr>
-        <tr th:each="bokning:${allabokningar}">
-            <th th:text="${bokning.startdatum}"></th>
-            <th th:text="${bokning.slutdatum}"></th>
-            <th th:text="${bokning.numOfBeds}"></th>
+        <table>
+            <tr >
+                <td>Startdatum</td>
+                <td>Slutdatum</td>
+                <td>Antal sängar</td>
+                <td>Ändra bokning</td>
+            </tr>
+            <tr th:each="bokning:${allabokningar}">
+                <th th:text="${bokning.startdatum}"></th>
+                <th th:text="${bokning.slutdatum}"></th>
+                <th th:text="${bokning.numOfBeds}"></th>
+                <th><a th:href="@{/book}">Ändra bokning</a></th>
+                <td>
+                <td>
+                    <form method="post" th:action="@{/bokningar/delete/{id}(id=${bokning.id})}">
+                        <button type="submit">Ta bort</button>
+                    </form>
 
-            <!-- länka till en ändra bokningssida -->
-            <th><a th:href="@{/book}">Ändra bokning</a></th>
+                </td>
 
-        </tr>
-    </table>
-</div>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
 </body>
 </html></title>
