Added 'visaBokningar.html' for testing purposes

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -127,3 +127,11 @@ body{
 .book-button:hover{
     background-color: slategrey;
 }
+form {
+    margin: 0 auto;
+    width:400px;
+}
+
+.paddingBetweenCols td {
+    padding: 0 15px;
+}
