--- a/src/main/resources/templates/addBokning.html
+++ b/src/main/resources/templates/addBokning.html
@@ -17,18 +17,18 @@
     </nav>
     <form action="/book/viewRooms" method="get" class="form-container">
         <label for="namn">Namn:</label>
-        <input class="text-input" type="text" id="namn" name="namn">
+        <input class="text-input" type="text" id="namn" name="namn" th:value="${name}">
         <label for="telNr">Telefonnummer:</label>
-        <input class="text-input" type="tel" id="telNr" name="telNr">
+        <input class="text-input" type="tel" id="telNr" name="telNr" th:value="${telNr}">
         <label for="email">Email:</label>
-        <input class="text-input" type="email" id="email" name="email">
+        <input class="text-input" type="email" id="email" name="email" th:value="${email}">
         <hr>
         <div class="date-container">
             <label for="startDate">Från:</label>
-            <input type="date" id="startDate" name="startDate">
+            <input type="date" id="startDate" name="startDate" th:value="${startDate}">
             <hr>
             <label for="endDate">Till och med:</label>
-            <input type="date" id="endDate" name="endDate">
+            <input type="date" id="endDate" name="endDate" th:value="${endDate}">
         </div>
         <label for="antalPersoner">Antal personer:</label>
         <input class="num-input" type="number" id="antalPersoner" name="antalPersoner" max="4" min="1" value="1">
@@ -41,8 +41,8 @@
                     <p th:text="'Rum ' + ${room.rumsnr} +' ' + ${roomType}"></p>
                     <form action="#" th:action="@{/bokningar/add}" method="post">
                         <div th:if="${room.dubbelrum}">
-                            <label for="numOfBeds">Extrasäng</label>
-                            <input type="number" id="numOfBeds" name="numOfBeds" th:max="${room.storlek - 1}" min="0" value="0">
+                            <label for="numOfBeds2">Extrasäng</label>
+                            <input type="number" id="numOfBeds2" name="numOfBeds2" th:max="${room.storlek - 1}" min="0" value="0">
                         </div>
                         <input type="hidden" name="rumId" th:value="${room.id}">
                         <input type="hidden" name="namn" th:value="${name}">
@@ -50,7 +50,7 @@
                         <input type="hidden" name="email" th:value="${email}">
                         <input type="hidden" name="startDate" th:value="${startDate}">
                         <input type="hidden" name="endDate" th:value="${endDate}">
-                        <input type="hidden" name="numOfBeds" th:value="${numOfBeds}">
+                        <input type="hidden" name="numOfBeds" th:value="${antalPersoner}">
                         <button class="book-button" type="submit">Boka</button>
                     </form>
                 </div>
