--- a/src/main/resources/templates/changedone.html
+++ b/src/main/resources/templates/changedone.html
@@ -2,17 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Alla kunder</title>
+    <title>Kund togs bort</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Uppdatera kundinfo -->
-<h2>Uppdatera kundinfo</h2>
+<div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/index}" >Home</a></button>
+    </nav>
+    <div>
+        <form action="#" th:action="@{/kunder}" method="post">
 
-<form action="#" th:action="@{/kunder}" th:object="${updatekund}" method="post">
+            <h2>Ändringen lyckades genomföras!</h2>
+            <input type="submit" value="Ok">
+        </form>
+    </div>
 
-    <h2>Ändringen lyckades genomföras!</h2>
-    <input type="submit" value="Ok">
-</form>
-
+</div>
 </body>
 </html>
