button laytout changes

--- a/src/main/resources/templates/changedone.html
+++ b/src/main/resources/templates/changedone.html
@@ -10,13 +10,10 @@
 </head>
 <body>
 <div class="container">
-    <nav class="navbar">
-        <button class="navButton"><a th:href="@{/index}" >Home</a></button>
-    </nav>
     <div>
         <form action="#" th:action="@{/kunder}" method="post">
 
-            <h2>Ändringen lyckades genomföras!</h2>
+            <h2>Kund borttagen!</h2>
             <input type="submit" value="Ok">
         </form>
     </div>
