--- a/src/main/resources/templates/visakunder.html
+++ b/src/main/resources/templates/visakunder.html
@@ -41,7 +41,11 @@
                 <td th:text="${kund.namn}"></td>
                 <td><a th:href="@{/kunder/showBokingarById/{id}(id=${kund.id})}">Visa bokningar</a></td>
                 <td><a th:href="@{/kunder/editById/{id}(id=${kund.id})}">Ändra</a></td>
-                <td><a th:href="@{/kunder/deleteById/{id}(id=${kund.id})}">Delete</a></td>
+                <td>
+                    <form th:action="@{/kunder/deleteById/{id}(id=${kund.id})}" method="post" onsubmit="return confirm('Är du säker på att du vill ta bort bokningen?')">
+                        <button type="submit">Delete</button>
+                    </form>
+                </td>
             </tr>
         </table>
     </div>
