--- a/src/main/resources/templates/updateBooking.html
+++ b/src/main/resources/templates/updateBooking.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
     <nav class="navbar">
-        <button class="navButton"><a th:href="@{/index}">Home</a></button>
+        <button class="navButton"><a th:href="@{/kunder/showBokingarById/{id}(id=${id})}" >Gå tillbaka</a></button>
     </nav>
     <form action="/book/update/viewRooms" method="get" class="form-container">
         <h4>Ändra bokning</h4>
