--- a/src/main/resources/templates/changenotdone.html
+++ b/src/main/resources/templates/changenotdone.html
@@ -10,11 +10,14 @@
 </head>
 <body>
 <div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/index}" >Home</a></button>
+    </nav>
     <div>
         <form action="#" th:action="@{/kunder}" method="post">
 
-            <h2>Kunden har aktiva bokningar och kan inte tas bort.!</h2>
-            <input type="submit" value="Ok">
+            <h2>Kunden har aktiva bokningar och kan inte tas bort!</h2>
+            <input class="book-button mt-10" type="submit" value="Tillbaka">
         </form>
     </div>
 </div>
