--- a/src/main/resources/templates/addBokning.html
+++ b/src/main/resources/templates/addBokning.html
@@ -39,21 +39,25 @@
             <h3 th:text="${rubrik}" ></h3>
             <div class="room-container" th:each="room : ${allRooms}">
                 <div class="room-inner-container">
-                    <p th:text="'Rum ' + ${room.rumsnr} +' ' + ${roomType}"></p>
-                    <form action="#" th:action="@{/bokningar/add}" method="post">
-                        <div th:if="${room.dubbelrum}">
-                            <label for="numOfBeds2">Extrasäng</label>
-                            <input type="number" id="numOfBeds2" name="numOfBeds2" th:max="${room.storlek - 1}" min="0" value="0">
-                        </div>
-                        <input type="hidden" name="rumId" th:value="${room.id}">
-                        <input type="hidden" name="namn" th:value="${name}">
-                        <input type="hidden" name="telNr" th:value="${telNr}">
-                        <input type="hidden" name="email" th:value="${email}">
-                        <input type="hidden" name="startDate" th:value="${startDate}">
-                        <input type="hidden" name="endDate" th:value="${endDate}">
-                        <input type="hidden" name="numOfBeds" th:value="${antalPersoner}">
-                        <button class="book-button" type="submit">Boka</button>
-                    </form>
+                    <div class="text-container">
+                        <p th:text="'Rum ' + ${room.rumsnr} +' ' + ${roomType}"></p>
+                    </div>
+                    <div class="button-container">
+                        <form action="#" th:action="@{/bokningar/add}" method="post">
+                            <div th:if="${room.dubbelrum}">
+                                <label for="numOfBeds2">Extrasäng</label>
+                                <input type="number" id="numOfBeds2" name="numOfBeds2" th:max="${room.storlek - 1}" min="0" value="0">
+                            </div>
+                            <input type="hidden" name="rumId" th:value="${room.id}">
+                            <input type="hidden" name="namn" th:value="${name}">
+                            <input type="hidden" name="telNr" th:value="${telNr}">
+                            <input type="hidden" name="email" th:value="${email}">
+                            <input type="hidden" name="startDate" th:value="${startDate}">
+                            <input type="hidden" name="endDate" th:value="${endDate}">
+                            <input type="hidden" name="numOfBeds" th:value="${antalPersoner}">
+                            <button class="navButton" type="submit">Boka</button>
+                        </form>
+                    </div>
                 </div>
             </div>
     </div>
