--- a/src/main/resources/templates/updateBooking.html
+++ b/src/main/resources/templates/updateBooking.html
@@ -50,7 +50,7 @@
                     <input type="hidden" name="email" th:value="${email}">
                     <input type="hidden" name="startDate" th:value="${startDate}">
                     <input type="hidden" name="endDate" th:value="${endDate}">
-                    <input type="hidden" name="numOfBeds" th:value="${antalPersoner}">
+                    <input type="hidden" name="numOfBeds" th:value="${numOfBeds}">
                     <button class="book-button" type="submit">Boka</button>
                 </form>
             </div>
