--- a/src/main/resources/templates/visakunder.html
+++ b/src/main/resources/templates/visakunder.html
@@ -14,14 +14,19 @@
         <button class="navButton"><a th:href="@{/index}" >Home</a></button>
     </nav>
     <h2>Registrera ny kund</h2>
-    <form action="#" th:action="@{/kunder/registreraNyKund}" method="post" class="form-container">
-        <label for="namn">Namn: </label>
-        <input type="text" id="namn" name="namn" value="" placeholder="För- & Efternamn">
-        <label for="tel">Telefonnummer: </label>
-        <input type="tel" id="tel" name="tel" value="" placeholder="10-siffrigt telefonnummer">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="" placeholder="Email address">
-        <input class="book-button mt-10" type="submit" value="Lägg till kund">
+    <form action="#" th:action="@{/kunder/registreraNyKund}" method="post">
+        <label for="namn">Name: </label>
+        <input type="text" id="namn" name="namn" th:value="${name}" placeholder="För- & efternamn"><br>
+        <label for="email">E-post:</label>
+        <input type="email" id="email" name="email" th:value="${email}" placeholder="Din email-address"><br>
+        <label for="tel">Mobil: </label>
+        <input type="tel" id="tel" name="tel" th:value="${telNr}" placeholder="Ditt 10-siffriga telefonnummer">
+        <br><br>
+        <input type="submit" value="Lägg till kund">
+        <br>
+        <p class="error" th:name="felmeddelande" th:text="${felmeddelande}">
+            <br>
+
     </form>
     <hr class="divider">
     <h2>Alla registrerade kunder</h2>
