--- a/src/main/resources/templates/visakunder.html
+++ b/src/main/resources/templates/visakunder.html
@@ -22,7 +22,7 @@
         <label for="tel">Mobil: </label>
         <input type="tel" id="tel" name="tel" th:value="${telNr}" placeholder="Ditt 10-siffriga telefonnummer">
         <br><br>
-        <input type="submit" value="Lägg till kund">
+        <input class="navButton" type="submit" value="Lägg till kund">
         <br>
         <p class="error" th:name="felmeddelande" th:text="${felmeddelande}">
             <br>
