Småfix i controllers och utseende fix i templates updateBooking.html samt visabokningperkund.html

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -191,10 +191,13 @@ form {
 
 .top-text-container{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .bottom-text-container{
     display: flex;
+    width: 100%;
 }
 
 .mt-10{
@@ -213,6 +216,10 @@ form {
     margin-left: 50px;
 }
 
+.ml-xl{
+    margin-left: 100px;
+}
+
 .m-auto{
     margin: auto;
 }
@@ -224,4 +231,8 @@ form {
 
 .button-kunder{
     margin-left: 20px;
+}
+
+.kund-container{
+    flex-direction: column;
 }
