--- a/src/main/resources/templates/updateBooking.html
+++ b/src/main/resources/templates/updateBooking.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!--Font-kit -->
+    <script src="https://kit.fontawesome.com/e381b12111.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
@@ -18,9 +20,8 @@
     <form action="/book/update/viewRooms" method="get" class="form-container">
         <h4>Ändra bokning</h4>
         <div class="date-container">
-            <label for="startDate" >Från:&nbsp;</label>
             <input type="date" id="startDate" name="startDate">
-            <label for="endDate">&nbsp;Till och med:&nbsp;</label>
+            <i class="fa-solid fa-right-long"></i>
             <input type="date" id="endDate" name="endDate">
         </div>
         <br>
