--- a/src/main/resources/templates/visabokningperkund.html
+++ b/src/main/resources/templates/visabokningperkund.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+    <!--Font-kit -->
+    <script src="https://kit.fontawesome.com/e381b12111.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
@@ -21,28 +22,25 @@
         <button class="navButton"><a th:href="@{/nyBokning(id=${id})}">Lägg till bokning</a></button>
     </div>
     <!-- Visa denna div om det finns bokningar-->
-    <div class="alla-bokningar room-container" th:unless="${#lists.isEmpty(allabokningar)}" th:each="bokning : ${allabokningar}">
-        <div class="room-inner-container">
-            <div class="text-container kund-text">
-                <div class="left-text-container">
-                    <div class="top-text-container">
-                        <p class="ml-10">Från</p>
-                        <p class="kund-text" th:text="${bokning.startdatum}"></p>
-                    </div>
-                    <div class="bottom-text-container">
-                        <p class="ml-10">Till</p>
-                        <p class="kund-text ml-12" th:text="${bokning.slutdatum}"></p>
-                    </div>
+    <div class="alla-bokningar room-container" th:unless="${#lists.isEmpty(allaDetailedBokningar)}" th:each="bokning : ${allaDetailedBokningar}">
+        <div class="room-inner-container kund-text kund-container">
+            <div class="top-text-container">
+                <p class="kund-text" th:text="${bokning.startdatum}"></p>
+                <i class="fa-solid fa-right-long"></i>
+                <p class="kund-text ml-12" th:text="${bokning.slutdatum}"></p>
+            </div>
+            <div class="bottom-text-container">
+                <div class="text-container">
+                    <p th:text="'Rum ' + ${bokning.rum.rumsnr}"></p>
+                    <p th:text="'Sängplatser ' + ${bokning.numOfBeds}"></p>
+                </div>
+                <div class="button-container ml-xl">
+                    <button class="navButton button-kunder"><a th:href="@{/bokningar/updateBokning/{id}(id=${bokning.id})}">Ändra bokning</a></button>
+                    <form method="post" th:action="@{/bokningar/delete/{id}(id=${bokning.id})}"onsubmit="return confirm('Är du säker på att du vill ta bort bokningen?')">
+                        <button class="navButton" type="submit">Ta bort</button>
+                    </form>
                 </div>
             </div>
-            <div class="button-container">
-                <button class="navButton button-kunder"><a th:href="@{/bokningar/updateBokning/{id}(id=${bokning.id})}">Ändra bokning</a></button>
-                <form method="post" th:action="@{/bokningar/delete/{id}(id=${bokning.id})}"onsubmit="return confirm('Är du säker på att du vill ta bort bokningen?')">
-                    <button class="navButton" type="submit">Ta bort</button>
-                </form>
-            </div>
-        </div>
-
 <!--
     <div class="alla_bokningar" th:unless="${#lists.isEmpty(allabokningar)}">
 
@@ -71,7 +69,7 @@
         </table>
     </div>
     -->
-</div>
-</div>
+        </div>
+    </div>
 </body>
 </html>
