--- a/src/main/resources/templates/changedone.html
+++ b/src/main/resources/templates/changedone.html
@@ -17,7 +17,7 @@
         <form action="#" th:action="@{/kunder}" method="post">
 
             <h2>Kund borttagen!</h2>
-            <input class="book-button mt-10" type="submit" value="Tillbaka">
+            <input class="book-button mt-10" type="submit" value="Ok">
         </form>
     </div>
 
