--- a/src/main/resources/templates/addBokning.html
+++ b/src/main/resources/templates/addBokning.html
@@ -45,8 +45,8 @@
                     <div class="button-container">
                         <form action="#" th:action="@{/bokningar/add}" method="post">
                             <div th:if="${room.dubbelrum}">
-                                <label for="numOfBeds2">Extrasäng</label>
-                                <input type="number" id="numOfBeds2" name="numOfBeds2" th:max="${room.storlek - 1}" min="0" value="0">
+                                <label for="extraBeds">Extrasäng</label>
+                                <input type="number" id="extraBeds" name="extraBeds" th:max="${room.storlek - 1}" th:min="${antalPersoner - 2}" th:value="${antalPersoner - 2}">
                             </div>
                             <input type="hidden" name="rumId" th:value="${room.id}">
                             <input type="hidden" name="namn" th:value="${name}">
@@ -54,7 +54,7 @@
                             <input type="hidden" name="email" th:value="${email}">
                             <input type="hidden" name="startDate" th:value="${startDate}">
                             <input type="hidden" name="endDate" th:value="${endDate}">
-                            <input type="hidden" name="numOfBeds" th:value="${antalPersoner}">
+                            <input type="hidden" name="antalPersoner" th:value="${antalPersoner}">
                             <button class="navButton" type="submit">Boka</button>
                         </form>
                     </div>
