--- a/src/main/resources/templates/updateBooking.html
+++ b/src/main/resources/templates/updateBooking.html
@@ -41,8 +41,8 @@
                 <p th:text="'Rum ' + ${room.rumsnr} +' ' + ${roomType}"></p>
                 <form action="#" th:action="@{/bokningar/update}" method="post">
                     <div th:if="${room.dubbelrum}">
-                        <label for="numOfBeds">Extrasäng</label>
-                        <input type="number" id="numOfBeds" name="numOfBeds" th:max="${room.storlek - 1}" min="0" value="0">
+                        <label for="extraBeds">Extrasäng</label>
+                        <input type="number" id="extraBeds" name="extraBeds" th:max="${room.storlek - 1}" th:min="${antalPersoner - 2}" th:value="${antalPersoner - 2}">
                     </div>
                     <input type="hidden" name="bokId" th:value="${booking.id}">
                     <input type="hidden" name="rumId" th:value="${room.id}">
@@ -51,7 +51,7 @@
                     <input type="hidden" name="email" th:value="${email}">
                     <input type="hidden" name="startDate" th:value="${startDate}">
                     <input type="hidden" name="endDate" th:value="${endDate}">
-                    <input type="hidden" name="numOfBeds" th:value="${numOfBeds}">
+                    <input type="hidden" name="antalPersoner" th:value="${antalPersoner}">
                     <button class="book-button" type="submit">Boka</button>
                 </form>
             </div>
