--- a/src/main/resources/templates/visabokningperkund.html
+++ b/src/main/resources/templates/visabokningperkund.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Mina bokningar</title>
+    <title>Kunds bokningar</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
